kubernetes/apps/invoiceninja/invoiceninja/app/ingress-int.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: invoiceninja
    meta.helm.sh/release-namespace: invoiceninja
    nginx.ingress.kubernetes.io/cors-allow-headers: X-Forwarded-For
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
  labels:
    app.kubernetes.io/instance: invoiceninja
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: invoiceninja
    helm.sh/chart: invoiceninja-0.10.2
    helm.toolkit.fluxcd.io/name: invoiceninja
    helm.toolkit.fluxcd.io/namespace: invoiceninja
  name: invoiceninja-int
  namespace: invoiceninja
spec:
  ingressClassName: internal
  rules:
  - host: clients.${SECRET_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: invoiceninja-web
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - clients.${SECRET_DOMAIN}
    secretName: clients.${SECRET_DOMAIN}-tls
